--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.2.6",
+    "@randlabs/myalgo-connect": "^1.1.2",
+    "@reach-sh/stdlib": "^0.1.8-rc.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
+    "react-images-upload": "^1.2.8",
+    "react-router-dom": "^6.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-step-progress-bar": "^1.0.3",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
