--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
+    "react-idle-timer": "^4.6.4",
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
