--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.2"
   },
+  "browser": {
+    "crypto": false
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
